kubernetes/project-02/grafana-demo.deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: grafana-demo
  name: grafana-demo
  namespace: project-02
spec:
  replicas: 1
  selector:
    app: grafana-demo
    deploymentconfig: grafana-demo
  template:
    metadata:
      labels:
        app: grafana-demo
        deploymentconfig: grafana-demo
    spec:
      containers:
      - image: grafana/grafana:7.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: grafana-demo
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
